<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    android:backgroundTint="@color/colorAccent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    tools:context=".Contact" tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="3"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/name_ptxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:ems="10"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:textColor="@color/colowht"
                    android:textColorHint="@color/colowht"
                    android:backgroundTint="@color/colowht"
                    android:inputType="textPersonName"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/number_ptxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginRight="25sp"
                    android:layout_marginBottom="5sp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:backgroundTint="@color/colowht"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/colowht"
                    android:textColorHint="@color/colowht"
                    android:textSize="25sp"
                    tools:ignore="TextFields"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/email_ptxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextFields"
                    tools:targetApi="o"
                    android:textSize="25sp"
                    android:textColor="@color/colowht"
                    android:textColorHint="@color/colowht"
                    android:backgroundTint="@color/colowht"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"/>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="vertical"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <Button
                    android:id="@+id/add_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:background="@drawable/shape"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:background="@drawable/shape"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    />

                <Button
                    android:id="@+id/show_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/show"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:background="@drawable/shape"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>